# movie_vector_search

./: .gitignore  README.md  add_movies.py  config.py  connect.py  create_index.py  create_index_with_embeddings.py  create_pipeline_embedding.py  import_model.py  mapping.py  pyproject.toml  query_index_ml.py  utils.py
